--- a/docker-compose.yml.example
+++ b/docker-compose.yml.example
@@ -1,13 +1,9 @@
-version: "2"
 services:
   py12306:
     build: .
     volumes:
       # - ./runtime:/code/runtime  # 未使用 env.docker.py.example 可以打开此项
       - ./env.py:/config/env.py
-      - py12306:/data
+      - ./data:/data
     ports:
       - 8008:8008
-
-volumes:
-  py12306:
